# ultraschall-core-model

./: CMakeLists.txt  README.md  bootstrap.ps1  build.ps1
cmake/: linux.cmake  macos.cmake  win32.cmake
include/: CoreCommon.h  CoreFx.h  CoreGlobals.h  CoreGuid.h  CoreService.h  CoreServiceManager.h  CoreSharedObject.h  CoreStream.h  CoreString.h  CoreStringArray.h  CoreStringBuilder.h  CoreStringDictionary.h  CoreStringFunctions.h  CoreWideString.h
scripts/: DocHeader.tex  Doxyfile
src/: CMakeLists.txt  Common.h  CoreGuid.cpp  CoreServiceManager.cpp  CoreSharedObject.cpp  CoreStream.cpp  CoreString.cpp  CoreStringArray.cpp  CoreStringBuilder.cpp  CoreStringDictionary.cpp  CoreStringFunctions.cpp  CoreWideString.cpp  FileDialog.h  FileManager.cpp  FileManager.h  Platform.h  ServiceFactory.cpp  ServiceFactory.h  ServiceRegistry.cpp  ServiceRegistry.h
src/win32/: FileDialog.cpp  Platform.cpp  version.rc
